Sayfa listeleme, silme ve güncelleme yapıldı

--- a/Hacettepe.Web/appsettings.json
+++ b/Hacettepe.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=hacettepe_hastanesi;Username=postgres;Password=123456"
+    "DefaultConnection_": "Host=localhost;Port=5432;Database=hacettepe_hastanesi;Username=postgres;Password=123456",
+    "DefaultConnection" : "Host=shango.syncope.it;Port=5432;Database=hacettepe;Username=hacettepe;Password=Ats.t6sksr"
   },
   "Logging": {
     "LogLevel": {
