--- a/Hacettepe.Application/Hacettepe.Application.csproj
+++ b/Hacettepe.Application/Hacettepe.Application.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="FluentValidation" Version="11.9.1" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="8.3.14" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     </ItemGroup>
 
